src/objects/AF_Bonus_Matrix__c.object
<CustomObject>
    <description>Will represent an Agencies annual bonus results on an entity level</description>
    <fields>
        <fullName>AF_Agency_Entity_Column_Name__c</fullName>
        <description>AgencyFee#GLOBAL#To Store agency entity column name.</description>
        <label>Agency Entity Column Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_Agency_Entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>AgencyFee#GLOBAL#To relate bonus matrix with Agency entity.</description>
        <label>Agency Entity</label>
        <referenceTo>AF_Entity__c</referenceTo>
        <relationshipLabel>Bonus Matrix</relationshipLabel>
        <relationshipName>Bonus_Matrix</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AF_Agency_ExchangeRateTemp__c</fullName>
        <description>This field is used for Reporting backup</description>
        <label>Agency ExchangeRateTemp</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_Agency_Exchange_Rate__c</fullName>
        <defaultValue>0</defaultValue>
        <description>AgencyFee#GLOBAL#To Store agency exchange rate.</description>
        <label>Agency Exchange Rate</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_Agency_Spot_Rate__c</fullName>
        <description>AgencyFee#GLOBAL#To Store agency spot rate.</description>
        <label>Agency Spot Rate</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_Base_Fee_Country_Total__c</fullName>
        <description>Stores the row total for the Unilever Country. Used in calculating the proportion for each agency</description>
        <label>Base Fee Country Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_BonusMatrixCode__c</fullName>
        <description>Field holding the currency . This currency is shown in the Bonus Matrix</description>
        <label>BonusMatrixCode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_Bonus_Estimate_Local__c</fullName>
        <description>The actual value of the Bonus converted to local currency</description>
        <label>Bonus Estimate Local</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_Bonus_Estimate__c</fullName>
        <description>The actual value of the Bonus</description>
        <label>Bonus Estimate</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_Bonus_Local_Value__c</fullName>
        <description>Formula to calculate the converted estimate</description>
        <formula>if( text(AF_Status__c) =&quot;Ready for PO&quot; &amp;&amp; not(isnull(AF_Ready_For_PO_Exchange_Rate__c)),
 AF_Bonus_Estimate_Local__c ,
 AF_Value__c  * AF_Agency_Exchange_Rate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bonus Local Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_Bonus_Results__c</fullName>
        <description>AgencyFee#GLOBAL#To relate to  bonus results.</description>
        <label>Bonus Results</label>
        <referenceTo>AF_Bonus_Results__c</referenceTo>
        <relationshipLabel>Bonus Matrix</relationshipLabel>
        <relationshipName>Bonus_Matrix</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AF_Bonus_Summary__c</fullName>
        <description>Link to Parent Object for approval process and rollup summaries</description>
        <label>Bonus Summary</label>
        <referenceTo>AF_Bonus_Summary__c</referenceTo>
        <relationshipLabel>Bonus Matrix</relationshipLabel>
        <relationshipName>Bonus_Matrix</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AF_BonusableFee__c</fullName>
        <description>Bonusable fee from Base Fee Estimate. Traditionl, Digital or Both</description>
        <label>BonusableFee</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_Brand_Estimate__c</fullName>
        <description>AgencyFee#GLOBAL#To Store brand estimate.</description>
        <label>Brand Estimate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_CrossBorder_No__c</fullName>
        <defaultValue>0</defaultValue>
        <description>No of Cross Borders for Matrix</description>
        <label>CrossBorder No</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_Fiscal_Year_FF__c</fullName>
        <formula>AF_Bonus_Summary__r.AF_Fiscal_Year__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fiscal Year FF</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_Fiscal_Year__c</fullName>
        <description>AgencyFee#GLOBAL#To Store Fiscal year.</description>
        <label>Fiscal Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_IsCrossBorderImage__c</fullName>
        <description>Show Red Icon in Matrix for cross border transactions</description>
        <formula>if( AF_IsCrossBorderNew__c , IMAGE( $Label.AF_AgencyUrlLink+&quot;/resource/AF_isTax&quot;, &quot;CrossBorder&quot; ,15,15) ,&quot; &quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsCrossBorderImage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_IsCrossBorderNew__c</fullName>
        <description>This field will be useful for cross border calculations in Agencyfee Application</description>
        <formula>IF( AND(TEXT(AF_Unilever_Entity__r.AF_Country__c) != TEXT(AF_Agency_Entity__r.AF_Country__c), AF_Value__c !=0) , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsCrossBorderNew</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AF_IsCrossBorderReport__c</fullName>
        <formula>IF(TEXT(AF_Agency_Entity__r.AF_Country__c) != TEXT(AF_Unilever_Entity__r.AF_Country__c),true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsCrossBorderReport</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AF_IsCrossBorder__c</fullName>
        <description>This field will be useful for cross border calculations in Agencyfee Application</description>
        <formula>true</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Crossborder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AF_MatrixCodeTemp__c</fullName>
        <description>This field created,for reporting backup</description>
        <label>MatrixCodeTemp</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_Overidden__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set when user overides a cell value. Subsequent save or submits of Bonus results will not overide this value</description>
        <label>Overidden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AF_Q1_c__c</fullName>
        <description>OOPs Q1 Value</description>
        <label>Q1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_Q2__c</fullName>
        <description>OOPS Q2 Value</description>
        <label>Q2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_Q3__c</fullName>
        <description>OOPS Q3 Value</description>
        <label>Q3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_Q4__c</fullName>
        <description>OOPS Q4 Value</description>
        <label>Q4</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_Rate_Currency__c</fullName>
        <description>AgencyFee#GLOBAL#To Store rate currency.</description>
        <label>Rate Currency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_Rate_Type__c</fullName>
        <description>AgencyFee#GLOBAL#To Store rate type.</description>
        <label>Rate Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_Ready_For_PO_Entry_Currency__c</fullName>
        <description>Currency used by agency unilever combination where values are  at Ready for po</description>
        <label>Ready For PO Entry Currency</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_Ready_For_PO_Exchange_Rate__c</fullName>
        <description>Exchange Rate used by agency unilever combination where values are at Ready for po</description>
        <label>Ready For PO Exchange Rate</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_ReadyforPoCodeTemp__c</fullName>
        <description>This field is used for reporting backup</description>
        <label>ReadyforPoCodeTemp</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_Status__c</fullName>
        <description>AgencyFee#GLOBAL#To Store status.</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>With category finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready for PO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AF_Total_Bonus_Value__c</fullName>
        <description>Holds the Total bonus value from bonus results</description>
        <formula>if( AF_Bonus_Results__r.AF_IsPilotModel__c , AF_Bonus_Results__r.AF_Total_Remuneration__c ,AF_Bonus_Results__r.AF_Total_Bonus_Value__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Bonus Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_Total_Country_Row_BF__c</fullName>
        <description>Holds the Total base fee from bonus results</description>
        <formula>if( AF_Bonus_Results__r.AF_IsPilotModel__c ,  AF_Bonus_Results__r.AF_Bonusable_Fees__c ,AF_Bonus_Results__r.AF_Bonusable_Fees__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Country Row BF</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_Unilever_Entity_Column_Name__c</fullName>
        <description>AgencyFee#GLOBAL#To Store Unilever entity column name.</description>
        <label>Unilever Entity Column Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_Unilever_Entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>AgencyFee#GLOBAL#To relate to Unilever entity.</description>
        <label>Unilever Entity</label>
        <referenceTo>AF_Entity__c</referenceTo>
        <relationshipLabel>Bonus Matrix (Unilever Entity)</relationshipLabel>
        <relationshipName>Bonus_Matrix1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AF_Value_Calc__c</fullName>
        <description>Formula to calculate the Bonus Value</description>
        <formula>IF( AF_Total_Country_Row_BF__c  &gt; 0  &amp;&amp; AF_BonusableFee__c &gt; 0,(AF_BonusableFee__c/AF_Total_Country_Row_BF__c  ) *  
if( AF_Bonus_Results__r.AF_IsPilotModel__c , AF_Bonus_Results__r.AF_Total_Remuneration__c ,AF_Bonus_Results__r.AF_Total_Bonus_Value__c)
, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Value Calc</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_Value_Local__c</fullName>
        <description>AgencyFee#GLOBAL#To Store local value.</description>
        <label>Bonus Value Local</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_Value__c</fullName>
        <description>AgencyFee#GLOBAL#To Store value.</description>
        <label>Bonus Value</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_bReqValidation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>**Technical Field : Inorder to bypass the validation rule, set this value as TRUE***</description>
        <label>bReqValidation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AF_isCommentImage__c</fullName>
        <description>Used to show Blue Icon in matrix for changes and comments</description>
        <formula>if( AF_isComment__c , IMAGE( $Label.AF_AgencyUrlLink+&quot;/resource/AF_isComment&quot;, &quot;Comment&quot; ,15,15) ,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isCommentImage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_isComment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Shows whether a comment has been made against the record</description>
        <label>isComment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agency_Entity_Name__c</fullName>
        <formula>AF_Agency_Entity__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agency Entity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <description>Stores the Brand Name</description>
        <formula>AF_Bonus_Results__r.AF_Bonus_Thresholds__r.AF_Brand_Estimate__r.Brand__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>Created for the sharing Rules, To share agency estimates based on the category.Field Value will be populated using a trigger.</description>
        <formula>AF_Bonus_Results__r.AF_Bonus_Thresholds__r.Brand_Name__r.AF_Category_Brands__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IDfrompilot__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>IDfrompilot</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PO_Number__c</fullName>
        <description>PO number from Ariba</description>
        <label>PO Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReadyforPOExchangeRateTemp__c</fullName>
        <label>ReadyforPOExchangeRateTemp</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unilever_Entity_Name__c</fullName>
        <description>Stores the Unilever Entity Name</description>
        <formula>AF_Unilever_Entity__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unilever Entity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unilver_Code__c</fullName>
        <label>Unilver Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Bonus Matrix</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Bonus Matrix Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bonus Matrix</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>